# atelier

./: .Dockerfile  .gitignore  .rustfmt.toml  404.html  CHANGELOG.md  CONTRIBUTE.md  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  README.md  atelier_sessions.md  benchmark_output.txt  index.html  rustfmt.toml  sitemap.xml
atelier/: CHANGELOG.md  Cargo.toml  README.md
atelier-agents/: Cargo.toml  README.md
atelier-agents/examples/: agent_formation.rs
atelier-agents/src/: distributed.rs  lib.rs  singular.rs
atelier-analytics/: Cargo.toml  README.md
atelier-analytics/examples/: orderbook_metrics.rs
atelier-analytics/src/: lib.rs  orderbook.rs
atelier-client/: Cargo.toml  README.md
atelier-client/examples/single_event_stream/: main.rs
atelier-client/src/: lib.rs  main.rs
atelier-core/: Cargo.toml  README.md
atelier-core/examples/: README.md  orderbook.rs  orders.rs  progressions.rs
atelier-core/src/: lib.rs
atelier-core/src/data/: mod.rs
atelier-core/src/levels/: mod.rs
atelier-core/src/orderbooks/: mod.rs  stats.rs
atelier-core/src/templates/: mod.rs
atelier-core/src/training/: mod.rs
atelier-core/tests/Orderbooks/: ob_methods.rs
atelier-core/tests/Orders/: order_methods.rs
atelier-data/: Cargo.toml  README.md
atelier-data/examples/: basic.rs  basic_orders.rs  orderbook.rs  orders.rs  progressions.rs
atelier-data/src/: lib.rs
atelier-data/src/configs/: mod.rs
atelier-data/src/data/: mod.rs
atelier-data/src/levels/: mod.rs
atelier-data/src/orderbooks/: mod.rs
atelier-data/src/orders/: mod.rs
atelier-data/src/results/: errors.rs  mod.rs
atelier-data/src/symbols/: mod.rs
atelier-data/src/trades/: mod.rs
atelier-data/src/training/: mod.rs
atelier-data/tests/Orderbooks/: ob_methods.rs
atelier-data/tests/Orders/: order_methods.rs
atelier-data/tests/orderbooks/: ob_methods.rs
atelier-dcm/: Cargo.toml  Config_01.toml  README.md  orderbooks_2.json
atelier-dcm/datasets/: exp_00_ai_00_binance_ob_backup.json
atelier-dcm/examples/: distributed_training.rs  load_configs.rs  orderbooks_2.json  pytorch_training.rs  single_training.rs  synthetic_markets.rs
atelier-dcm/experiments/: distributed_training_00.toml  exp_01.toml  single_training_00.toml
atelier-dcm/models/: logistic_regressor_scripted.pt
atelier-dcm/src/: agents.rs  dataset.rs  features.rs  lib.rs  models.rs  targets.rs  training.rs
atelier-dcml/: Cargo.toml  README.md
atelier-dcml/datasets/: exp_00_ai_00_binance_ob.json
atelier-dcml/examples/: backup.rs  compute_features.rs  load_configs.rs  loss_function.rs  loss_functions.rs  pytorch_training.rs  single_training.rs  singular_training.rs
atelier-dcml/experiments/: single_training_00.toml
atelier-dcml/src/: agents.rs  data.rs  features.rs  functions.rs  lib.rs  math.rs  metrics.rs  models.rs  optimizers.rs  processes.rs  targets.rs  trainers.rs  training.rs
atelier-demm/: Cargo.toml  README.md
atelier-demm/src/models/: mod.rs
atelier-generators/: Cargo.toml  README.md
atelier-generators/src/: brownian.rs  hawkes.rs  lib.rs  probabilistic.rs  randomizer.rs  synthetizer.rs
atelier-generators/src/hawkes/: univariate.rs
atelier-results/: Cargo.toml  README.md
atelier-results/src/: errors.rs  lib.rs
atelier-rs/: Cargo.toml  README.md
atelier-rs/src/: lib.rs
atelier-server/: CHANGELOG.md  Cargo.toml  README.md
atelier-server/docker/: docker-compose.yml
atelier-server/scripts/: start-atelier.sh
atelier-server/src/: lib.rs  main.rs
atelier-svm/: Cargo.toml  README.md
atelier-svm/src/: client.rs  lib.rs  model.rs
atelier-svm/tests/: model_methods.rs
atelier-synth/: Cargo.toml  README.md
atelier-synth/datasets/: exp_00_asia.json
atelier-synth/examples/: multiple_synthetic_ob.rs  single_synthetic_ob.rs  synthetic_ob_stats.rs
atelier-synth/src/: lib.rs  synthbooks.rs
atelier-synth/templates/: multi_orderbooks.toml  single_orderbook.toml
atelier/examples/: example_market_events.rs  market_events.rs  market_metrics.rs  ob_gbm_synthetic.rs  ob_gen_naive.rs  ob_gen_synthetic.rs  ob_hawkes.rs  ob_methods.rs  ob_metrics.rs  ob_synthetic.rs  ob_visualization.rs  probabilistic_generators.rs  stream_orderbook.rs
atelier/src/: lib.rs  main.rs
atelier/src/agents/: mod.rs
atelier/src/data/: admin.rs  hasher.rs  market.rs  mod.rs
atelier/src/engine/: README.md  channels.rs  mod.rs  queues.rs  routers.rs  routing.rs
atelier/src/errors/: errors.rs
atelier/src/events/: README.md  channels.rs  market.rs  message.rs  mod.rs  publishers.rs  subscribers.rs  templates.rs  topics.rs
atelier/src/generators/: README.md  brownian.rs  hawkes.rs  mod.rs  probabilistic.rs  randomizer.rs  synthetizer.rs
atelier/src/messages/: README.md  errors.rs  mod.rs
atelier/src/metrics/: README.md  market.rs  mod.rs  orderbook.rs
atelier/src/net/: mod.rs
atelier/src/results/: README.md  mod.rs  success.rs
atelier/src/simulation/: generators.rs  hawkes.rs  mod.rs  randomizer.rs
benches/: Cargo.toml  README.md  orderbook_benchmark.rs  orderbook_benchmark_raw.txt  orderbook_random.rs
examples/: Cargo.toml  Config.toml  README.md  naive_ob_progression.rs  orderbook_progressions.rs  orderbook_synthetizer.rs  probabilistic_generators.rs
examples/case_a/: case_a_data.csv  case_a_data.rs  case_a_ob.json  case_a_training.rs  config_a.toml  data_case_a.csv  singular_model.pt
examples/case_b/: case_b_data.rs  case_b_training.rs  config_b.toml  topology_b.toml
examples/case_c/: config_c.toml
examples/distributed/: README.md  synthetic_obs.rs
examples/quant/: orderbook_metrics.rs
examples/tutorials_orderbook/: 01_simple_ob.md  01_simple_ob.rs
tests/: Cargo.toml  README.md  orderbook_progression.rs  test_generators.rs  test_orderbook.rs  test_processes.rs
tests/data/: orderbooks.rs  orders.rs  test_basic_orderbook.rs
tests/dcml/: test_compute_features.rs
tests/generators/: brownian.rs  synthetizer.rs
tests/metrics/: market.rs  orderbook.rs
tests/orderbook/: implementations.rs  progressions.rs
tests/process/: brownian.rs  hawkes.rs
tests/synth/: test_single_synthetic_ob.rs
(+30 files in other folders)
