[workspace]

resolver = "2"
members = [
  
  # Binary formation
  "atelier",

  # Agentic features
  "atelier-agents",

  # Operational
  "atelier-core",
  "atelier-results",

  # Distributed Convex ML
  "atelier-dcml",
  
  # Scientific Computing
  "atelier-generators",

  # Synthetic Data Generation
  "atelier-synth",

  # Solana Virtual Machine interface
  "atelier-svm",
  
  # Usability and Excellence
  "benches",
  "examples",
]

default-members = [
  "atelier",
  "atelier-core",
  "atelier-dcml",
  "atelier-generators",
  "atelier-results",
  "atelier-synth",
  "examples",
]

[workspace.package]
edition = "2021"
rust-version = "1.84.0"

description = "Rust Engine for High Frequency, Synthetic and Historical, Market Microstructure Modeling"
authors = ["IteraLabs.ai <contact@iteralabs.ai>"]
documentation = "https://docs.rs/atelier/"
repository = "https://github.com/iteralabs/atelier"
homepage = "https://iteralabs.ai/atelier"

keywords = ["machine-learning", "framework", "math", "crypto", "trading"]
categories = ["data-structures", "development-tools", "finance", "simulation"]
exclude = ["assets/*", ".github", "Makefile.toml", "CONTRIBUTING.md", "*.log", "tags"]
include = ["katex-header.html"]

license = "Apache-2.0"

[workspace.dependencies]

# Atelier complements
atelier = { path = "./atelier", version = "0.0.1" }
atelier-agents = { path = "./atelier-agents", version = "0.0.1" }
atelier-core = { path = "./atelier-core", version = "0.0.1" }
atelier-dcml = { path = "./atelier-dcml", version = "0.0.1" }
atelier-generators = { path = "./atelier-generators", version = "0.0.1" }
atelier-results = { path = "./atelier-results", version = "0.0.1" }
atelier-svm = { path = "./atelier-svm", version = "0.0.1" }
atelier-synth = { path = "./atelier-synth", version = "0.0.1" }

# Error Handling
thiserror = { version = "1.0.64" }

# Probabilistic features
rand = { version = "0.9.0" }
rand_distr = { version = "0.5.0" }

# Benchmarks
criterion = { version = "0.5", features = ["html_reports"] }
memuse = { version = "0.2.0" }
human_bytes = { version = "0.4.1" }

# file management
toml = { version = "0.8" }
csv = { version = "1.3" }

# command line
clap = { version = "4.5", features = ["derive"] }

# computing
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tch = { version = "0.20.0" }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_extern_crates = "warn"

