[package]
name = "atelier-agents"
version = "0.0.1"
edition = "2021"
publish = false

description = "Agentic features for the atelier.rs"
authors = ["IteraLabs.ai <contact@iteralabs.ai>"]
keywords = ["machine-learning", "reinforcement-learning", "crypto", "trading"]
categories = ["data-structures", "development-tools", "finance", "simulation"]

[lints]
workspace = true

[dependencies]
atelier = { path = "../atelier" }
