[package]
name = "atelier-analytics"
description = "Metrics and Data Analytics tools for the Atelier crate"
version = "0.0.1"
publish = false

edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
repository.workspace = true

[dev-dependencies]

# Probabilistic features
rand = { workspace = true }
rand_distr = { workspace = true }
