[package]
name = "atelier-client"
version = "0.0.1"
edition = "2021"
publish = false

description = "Client-side tools for the atelier.rs"
authors = ["IteraLabs.ai <contact@iteralabs.ai>"]

keywords = ["machine-learning", "framework", "math", "crypto", "trading"]
categories = ["data-structures", "development-tools", "finance", "simulation"]

documentation = "https://docs.rs/atelier/"
repository = "https://github.com/iteralabs/atelier"

include = ["src/**/*", "katex-header.html"]

[lints]
workspace = true

[dependencies]
atelier = { path = "../atelier" }

