[package]
name = "atelier-core"
description = "Data structures and I/O tools for the Atelier crate"
version = "0.0.1"
publish = false

edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]

# Error
thiserror = { workspace = true }

# Probabilistic features
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tch = { version = "0.20" }

[dev-dependencies]

# Benchmarking
criterion = { workspace = true }

# ------------------------------------------------------------------------- Examples -- #
# ------------------------------------------------------------------------- -------- -- #

[[example]]
name = "basic_orders"
path = "examples/orders.rs"

[[example]]
name = "basic_orderbook"
path = "examples/orderbook.rs"

[[example]]
name = "basic_orderbook_progressions"
path = "examples/progressions.rs"

# ---------------------------------------------------------------------------- Tests -- #
# ---------------------------------------------------------------------------- ----- -- #

[[test]]
name = "orderbook_methods"
path = "tests/Orderbooks/ob_methods.rs"

[[test]]
name = "order_methods"
path = "tests/Orders/order_methods.rs"

