[package]
name = "atelier-data"
description = "Data structures and I/O tools for the Atelier crate"
version = "0.0.1"
publish = false

edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]

# Error
thiserror = { workspace = true }

# Probabilistic features
rand = { workspace = true }
rand_distr = { workspace = true }

[dev-dependencies]

# Benchmarking
criterion = { workspace = true }

[[example]]
name = "basic_orders"
path = "examples/orders.rs"

[[example]]
name = "basic_orderbook"
path = "examples/orderbook.rs"

[[test]]
name = "orderbook_methods"
path = "tests/Orderbooks/ob_methods.rs"
