[package]
name = "atelier_data"
description = "Core data structures and I/O tools for the atelier-rs engine"
publish = true
readme = "README.md"

version = "0.0.1"
rust-version = "1.84.1"
edition = "2021"

exclude = ["assets/*", ".github", "Makefile.toml", "*.log", "tags"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "../katex-header.html"
]

authors = ["IteraLabs.ai"]
documentation = "https://docs.rs/atelier-rs/"
repository = "https://github.com/iteralabs/atelier-rs"
homepage = "https://iteralabs.ai/atelier-rs"
keywords = ["machine-learning", "framework", "math", "crypto", "trading"]
categories = ["data-structures", "development-tools", "finance", "simulation"]
license = "Apache-2.0"

[lib]
name = "atelier_data"
path = "src/lib.rs"

[dependencies]

# Atelier sub-modules 
atelier_results = { path = "../atelier-results", version = "0.0.1" }

# Error
thiserror = { version = "1.0.64" }

# Probabilistic features
rand = { version = "0.9.0" }
rand_distr = { version = "0.5.0" }

# Computing
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# File management
toml = { version = "0.8" }
csv = { version = "1.3" }

# AI/ML with LibTorch from C++
tch = { version = "0.20.0" }

# ------------------------------------------------------------------------- Examples -- #
# ------------------------------------------------------------------------- -------- -- #

[[example]]
name = "basic_orders"
path = "examples/orders.rs"

[[example]]
name = "basic_orderbook"
path = "examples/orderbook.rs"

[[example]]
name = "basic_orderbook_progressions"
path = "examples/progressions.rs"

# ---------------------------------------------------------------------------- Tests -- #
# ---------------------------------------------------------------------------- ----- -- #

[[test]]
name = "orderbook_methods"
path = "tests/Orderbooks/ob_methods.rs"

[[test]]
name = "order_methods"
path = "tests/Orders/order_methods.rs"

