[package]
name = "atelier-dcml"
description = "Distributed Convex Machine Learning"
version = "0.0.1"
publish = false

edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]

# Atelier sub-modules 
atelier-core = { path = "../atelier-core", version = "0.0.1" }
atelier-generators = { path = "../atelier-generators", version = "0.0.1" }

# Probabilistic features
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true } 

# Computing 
tch = { workspace = true }

[[example]]
name = "load_configs"
path = "examples/load_configs.rs"

[[example]]
name = "compute_features"
path = "examples/compute_features.rs"

[[example]]
name = "pytorch_training"
path = "examples/pytorch_training.rs"

[[example]]
name = "distributed_training"
path = "examples/distributed_training.rs"

[[example]]
name = "single_training"
path = "examples/single_training.rs"

[lints]
workspace = true
