[package]
name = "atelier-dcml"
description = "Distributed Convex Machine Learning"
version = "0.0.1"
publish = false

edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]

# Atelier sub-modules 
atelier-core = { path = "../atelier-core", version = "0.0.1" }
atelier-generators = { path = "../atelier-generators", version = "0.0.1" }

# Probabilistic features
rand = { workspace = true }
rand_distr = { workspace = true }

# Data
toml = { workspace = true } 
csv = { workspace = true }

# Computing 
serde = { workspace = true }
serde_json = { workspace = true }
tch = { workspace = true }

[[example]]
name = "compute_features"
path = "examples/compute_features.rs"

[[example]]
name = "loss_functions"
path = "examples/loss_functions.rs"

[[example]]
name = "singular_training"
path = "examples/singular_training.rs"

[lints]
workspace = true
