[package]
name = "atelier_dcml"
description = "Distributed Convex Machine Learning for the atelier-rs engine"
publish = true
readme = "README.md"

version = "0.0.1"
rust-version = "1.84.1"
edition = "2021"

exclude = ["assets/*", ".github", "Makefile.toml", "*.log", "tags"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "../katex-header.html"
]

authors = ["IteraLabs.ai"]
documentation = "https://docs.rs/atelier_rs/"
repository = "https://github.com/iteralabs/atelier-rs"
homepage = "https://iteralabs.ai/atelier-rs"
keywords = ["machine-learning", "framework", "math", "crypto", "trading"]
categories = ["data-structures", "development-tools", "finance", "simulation"]
license = "Apache-2.0"

[lib]
name = "atelier_dcml"
path = "src/lib.rs"

[dependencies]

# Atelier sub-modules 
atelier_data = { path = "../atelier-data", version = "0.0.1" }
atelier_generators = { path = "../atelier-generators", version = "0.0.1" }

# Probabilistic features
rand = { version = "0.9.0" }
rand_distr = { version = "0.5.0" }

# File management
toml = { version = "0.8" }
csv = { version = "1.3" }

# Computing
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# AI/ML with LibTorch from C++
tch = { version = "0.20.0" }

[[example]]
name = "loss_functions"
path = "examples/loss_functions.rs"

[[example]]
name = "singular_training"
path = "examples/singular_training.rs"

[lints.rust]
unsafe_code = "forbid"
unused_extern_crates = "allow"
unreachable_code = "deny"
unreachable_patterns = "deny"
unused_variables = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }

