[package]
name = "atelier-generators"
description = "Probabilistic generators and events simulation for the Atelier crate"
version = "0.0.1"
publish = false

edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]

# Error
thiserror = { workspace = true }

# Probabilistic features
rand = { workspace = true }
rand_distr = { workspace = true }

