[package]
name = "atelier-server"
version = "0.0.1"
edition = "2021"
publish = false

description = "Deployment Artifacts for the atelier.rs"
authors = ["IteraLabs.ai <contact@iteralabs.ai>"]

keywords = ["machine-learning", "framework", "math", "crypto", "trading"]
categories = ["data-structures", "development-tools", "finance", "simulation"]

documentation = "https://docs.rs/atelier/"
repository = "https://github.com/iteralabs/atelier"

[dependencies]
rdkafka = { workspace = true }
tokio = { workspace = true }

