[package]
name = "atelier-synth"
description = "Synthetic Data Generation"
version = "0.0.1"
publish = false

edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]

# Atelier sub-modules 
atelier = { path = "../atelier", version = "0.1.0" }
atelier-core = { path = "../atelier-core", version = "0.0.1" }
atelier-generators = { path = "../atelier-generators", version = "0.0.1" }

# Computing
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }

# Probabilistic features
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true } 

# --- Dependencies for this crate
tch = { version = "0.20" }

[[example]]
name = "single_synthetic_ob"
path = "examples/single_synthetic_ob.rs"

[[example]]
name = "multiple_synthetic_ob"
path = "examples/multiple_synthetic_ob.rs"

[lints]
workspace = true

[env]
LIBTORCH="$HOME/libtorch"
DYLD_LIBRARY_PATH="$HOME/libtorch/lib"
LIBTORCH_BYPASS_VERSION_CHECK="FALSE"

