[package]
name = "atelier_synth"
description = "Synthetic Data Generation for the atelier-rs engine"
publish = true
readme = "README.md"

version = "0.0.1"
rust-version = "1.84.1"
edition = "2021"

exclude = ["assets/*", ".github", "Makefile.toml", "*.log", "tags"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "../katex-header.html"
]

authors = ["IteraLabs.ai"]
documentation = "https://docs.rs/atelier_rs/"
repository = "https://github.com/iteralabs/atelier-rs"
homepage = "https://iteralabs.ai/atelier-rs"
keywords = ["machine-learning", "framework", "math", "crypto", "trading"]
categories = ["data-structures", "development-tools", "finance", "simulation"]
license = "Apache-2.0"

[lib]
name = "atelier_synth"
path = "src/lib.rs"

[dependencies]

# Atelier sub-modules 
atelier_dcml = { path = "../atelier-dcml", version = "0.0.1" }
atelier_data = { path = "../atelier-data", version = "0.0.1" }
atelier_generators = { path = "../atelier-generators", version = "0.0.1" }

# Probabilistic features
rand = { version = "0.9.0" }
rand_distr = { version = "0.5.0" }

# Computing
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# File management
toml = { version = "0.8" }

[[example]]
name = "multiple_synthetic_ob"
path = "examples/multiple_synthetic_ob.rs"

[[example]]
name = "synthetic_ob_stats"
path = "examples/synthetic_ob_stats.rs"

[lints.rust]
unsafe_code = "forbid"
unused_extern_crates = "allow"
unreachable_code = "deny"
unreachable_patterns = "deny"
unused_variables = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }

