[package]
name = "atelier"
version = "0.1.0"
edition = "2021"
description = "a Computational Workshop for Market Microstructure Modeling, Synthetic Simulation and Historical Replay"
authors = ["IteraLabs.ai <contact@iteralabs.ai>"]
license = "Apache-2.0"
keywords = ["machine-learning", "framework", "math", "crypto", "trading"]
categories = ["data-structures", "development-tools", "finance", "simulation"]
documentation = "https://docs.rs/atelier/"
repository = "https://github.com/iteralabs/atelier"

include = ["src/**/*", "katex-header.html"]

[dependencies]

# Atelier workbench
atelier-data = { workspace = true }

# Error Handling
thiserror = { version = "1.0.64" }

# Probabilistic features
rand = { workspace = true }
rand_distr = { workspace = true }

