[package]
name = "atelier"
description = "Rust Engine for High Frequency, Synthetic and Historical, Market Microstructure Modeling"
version = "0.0.1"
publish = true

edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]

# Atelier workbench
atelier-core = { workspace = true }
atelier-dcml = { workspace = true }
atelier-generators = { workspace = true }
atelier-results = { workspace = true }
atelier-synth = { workspace = true }

# Error Handling
thiserror = { workspace = true }

# Probabilistic features
rand = { workspace = true }
rand_distr = { workspace = true }

# Command Line Arguments
clap = { workspace = true }

# Data processing
tokio = { workspace = true }
serde_json = { workspace = true }

