[package]
name = "benches"
description = "Benchmarks for the Atelier project"
version = "0.0.1"
publish = false

edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]

# Atelier sub-modules 
atelier = { workspace = true }
atelier-analytics = { workspace = true }
atelier-data = { workspace = true }
atelier-generators = { workspace = true }

criterion = { workspace = true }
rand = { workspace = true }
memuse = { workspace = true }
human_bytes = { workspace = true }

[[bench]]
name = "orderbook_benchmark"
path = "orderbook_benchmark.rs"
harness = false

