[package]
name = "examples"
description = "end-to-end examples for the Atelier crate"
version = "0.0.1"
publish = false

edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
repository.workspace = true

[dev-dependencies]

# Atelier sub-modules 
atelier = { path = "../atelier", version = "0.1.0" }
atelier-analytics = { path = "../atelier-analytics", version = "0.0.1" }
atelier-data = { path = "../atelier-data", version = "0.0.1" }
atelier-dcm = { path = "../atelier-dcm", version = "0.0.1" }
atelier-generators = { path = "../atelier-generators", version = "0.0.1" }

# Probabilistic features
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }

[[example]]
name = "orderbook_progressions"
path = "orderbook_progressions.rs"

[[example]]
name = "orderbook_synthetizer"
path = "orderbook_synthetizer.rs"

[lints]
workspace = true
