[package]
name = "tests"
description = "Tests for the Atelier crate"
version = "0.0.1"
publish = false

edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
repository.workspace = true

[dev-dependencies]

# Atelier sub-modules 
atelier = { workspace = true }
atelier-data = { workspace = true }
atelier-generators = { workspace = true }

# Error Handling
thiserror = { workspace = true }

# Probabilistic features
rand = { workspace = true }
rand_distr = { workspace = true }

