[package]
name = "tests"
description = "Tests for the Atelier crate"
version = "0.0.1"
publish = false

edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
repository.workspace = true

[dev-dependencies]

# Atelier sub-modules 
atelier = { path = "../atelier", version = "0.1.0" }
atelier-core = { path = "../atelier-core", version = "0.0.1" }
atelier-generators = { path = "../atelier-generators", version = "0.0.1" }
atelier-dcm = { path = "../atelier-dcm", version = "0.0.1" }

# Error Handling
thiserror = { workspace = true }

# Probabilistic features
rand = { workspace = true }
rand_distr = { workspace = true }

